# grokkingfp-excersice

./: .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/clojure/: deps.edn
app/csharp/: GrokkingFP.CSharp.sln
app/elixir/: mix.exs
app/python/: README.md  pyproject.toml
app/python/src/grokking_fp/: __init__.py  ch01_intro.py  ch02_pure_functions.py  ch03_immutable_data.py  ch04_higher_order.py  ch05_flatmap.py  ch06_option.py  ch07_either.py  ch08_io.py  ch09_streams.py  ch10_concurrency.py  ch11_travel_guide.py  ch12_testing.py
app/python/tests/: __init__.py  test_ch01_intro.py  test_ch02_pure_functions.py  test_ch03_immutable_data.py  test_ch04_higher_order.py  test_ch05_flatmap.py  test_ch06_option.py  test_ch07_either.py  test_ch08_io.py  test_ch09_streams.py  test_ch10_concurrency.py  test_ch11_travel_guide.py  test_ch12_testing.py
app/rust/: Cargo.toml
app/rust/src/: ch01_intro.rs  ch02_pure_functions.rs  ch03_immutable_data.rs  ch04_higher_order.rs  ch05_flatmap.rs  ch06_option.rs  ch07_result.rs  ch08_io.rs  ch09_stream.rs  ch10_concurrency.rs  ch11_channels.rs  ch12_app.rs  lib.rs
clojure/: index.html
csharp/: index.html
elixir/: index.html
fsharp/: index.html
haskell/: index.html
java/: index.html
part-1/: index.html
part-2/: index.html
part-3/: index.html
part-4/: index.html
part-5/: index.html
part-6/: index.html
python/: index.html
ruby/: index.html
rust/: index.html
scala/: index.html
search/: search_index.json
typescript/: index.html
(+348 files in other folders)
