[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grokking-fp"
version = "0.1.0"
description = "Grokking Functional Programming - Python implementation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Project Team" }
]
dependencies = [
    "result>=0.17.0",
    "returns>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.82.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grokking_fp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
